# bingota

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: gitleaks.yml  infra-scan.yml  rust-ci.yml
src/: lib.rs  main.rs
src/application/: service.rs
src/application/ports/: input_port.rs  mod.rs  output_port.rs
src/domain/: model.rs  repository.rs
src/infrastructure/: database.rs
src/infrastructure/web/: controller.rs  mod.rs  routes.rs  start_server.rs
