[package]
name = "bingokta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
prima-tracing = { version = "0.14.1", features = ["traces", "dev"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["fs", "macros", "rt-multi-thread"] }
tower-sessions = "0.13.0"
tracing = "0.1.40"

[dev-dependencies]
axum-test = "16.2.0"
